# AGK-Vita

./: .gitignore  README.md  THIRD-PARTY.txt  TIER2_GUIDE.md
Player/: MAKE_VPK.bat  config.txt
Player/game/: PUT_GAME_HERE.txt
Player/tools/: make_artwork.py  make_vpk.ps1
Src/apps/interpreter_vita/: CMakeLists.txt  Core.cpp
Src/apps/template_vita/: CMakeLists.txt  Core.cpp  MAKE_VPK.bat  config.txt  template.cpp  template.h
Src/apps/template_vita/game/: template.cpp
Src/apps/template_vita/tools/: make_vpk.ps1
Src/patches/: engine.patch
Src/platform-vita/Source/: VitaAudio.cpp  VitaCore.cpp  VitaFileSystem.cpp  VitaMisc.cpp  VitaNetwork.cpp  VitaNetwork.h  VitaThread.h
